Applications/file-browser/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-web
  namespace: filebrowser
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`file.lab.markaplay.net`)
      kind: Rule
      services:
      - name: file-browser
        port: 80
  tls:
    secretName: filebrowser-cert
